fixing some spacing

--- a/www/media/less/customizations.less
+++ b/www/media/less/customizations.less
@@ -1,3 +1,8 @@
 @import "bootstrap.less";
 
+/* needed to put content below navbar */
+body {
+	padding-top: 50px;
+	padding-bottom: 20px;
+}
 /* customizations go here */
